Add some styles, start adding options to join/host

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,29 @@
 extends layout
 
 block content
-  script(src='/javascripts/home.js')
-  h1 BitPoints
-  p Effortlessly bet on ticket point values something something magic.
-  p
-    a(href="/create") Create A BitPoint Room
-  br
-  input(type='text')#room-id
-  button#join-room Join Room
+	header
+		h1 BitPoints
+		p Effortlessly bet on ticket point values something something magic.
+		
+	div.main
+		p.description.
+			BitPoint helps scrum teams lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur.
+		div.join
+			h2 Join an Room
+			form(id="join", action="/roomJoin")
+				label(for='room-id') Room ID
+				input(type='text')#room-id
+				label(for='email') Gravatar Email
+				input(type='text')#email
+				input(type='submit', value='Join Room')#join-room
+		div.create
+			h2 Create Room
+			form(id="create", action="/create")
+				input(type='text')#title
+				input(type='submit', value='Create A BitPoint Room')#join-room
+
+	script(src='/javascripts/home.js')
