--- a/views/roomHost.jade
+++ b/views/roomHost.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  h1 Welcome to #{title} (#{roomId})
+
+
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/client.js")
-  h1 Welcome to room #{roomId}
