--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1 Welcome to room #{roomId}
-
+  img(src='#{avatar}')
+  p #{user}
 
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/clientVoter.js")
-  
