--- a/views/index.jade
+++ b/views/index.jade
@@ -15,8 +15,10 @@ block content
 		div.join
 			h2 Join an Room
 			form(id="join", action="/roomJoin")
-				label(for='room-id') Room ID
+				label(for='room-id') Room ID*
 				input(type='text')#room-id
+				label(for='name') Name*
+				input(type='text')#user
 				label(for='email') Gravatar Email
 				input(type='text')#email
 				input(type='submit', value='Join Room')#join-room
