--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -1,9 +1,29 @@
 extends layout
 
 block content
-  h1 Welcome to room #{roomId}
-  img(src='#{avatar}')
-  p #{user}
+	h1 Welcome to room #{roomId}
+	img#avatar(src='#{avatar}')
+	p #{user}
 
-  script(src="/socket.io/socket.io.js")
-  script(src="/javascripts/clientVoter.js")
+	h3#estimate
+
+	ul#estimateOptions
+		li 1
+		li 2
+		li 3
+		li 5
+		li 8
+		li 13
+		li 21
+		li 34
+		li 55
+		li 89
+
+	script.
+		var bp = {
+			roomId: #{roomId},
+			avatar: "#{avatar}",
+			user: "#{user}"
+		}
+	script(src="/socket.io/socket.io.js")
+	script(src="/javascripts/clientVoter.js")
