Add estimate states, use cards

--- a/views/roomHost.jade
+++ b/views/roomHost.jade
@@ -3,6 +3,10 @@ extends layout
 block content
 	h1 Welcome to #{title} (#{roomId})
 
+	h2 Status: 
+		span Waiting to begin
+	button#toggleRound Toggle Round
+
 	ul#users
 
 	script.
