--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -112,10 +112,86 @@ header {
 
 
 /* ---------------------
-				 ROOM
+				 CLIENT
 --------------------- */
 
 
+
+
+
+
+/* ---------------------
+				 ROOM
+--------------------- */
+
+body { perspective: 1000; }
+
+ul {
+	width: 100%;
+	li {
+		float: left;
+		position: relative;
+		width: 200px;
+		margin: 20px;
+		img {
+
+		}
+		h3 {
+			display: inline-block;
+			vertical-align: middle;
+		} 
+		.card {
+			position: absolute;
+			width: 200px;
+			height: 270px;
+			left: 0;
+			top: 9999px;
+			&.visible { top: 120px; }
+			-webkit-transition: 0.6s;
+			transition: 0.6s;
+			-webkit-transform-style: preserve-3d;
+			-ms-transform-style: preserve-3d;
+			transform-style: preserve-3d;
+			&.showValue {
+				-webkit-transform: rotateY(180deg);
+				-ms-transform: rotateY(180deg);
+				transform: rotateY(180deg);
+			}
+			.cardInner, .cardBack {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0; left: 0;
+				border: 10px solid #fff;
+				border-radius: 5px;
+				box-shadow: 0 0 3px #444;
+				-moz-box-sizing:border-box;
+				-webkit-box-sizing:border-box;
+				box-sizing:border-box;
+				-webkit-backface-visibility: hidden;
+				-moz-backface-visibility: hidden;
+				-ms-backface-visibility: hidden;
+				backface-visibility: hidden;
+			}
+			.cardBack {
+				background-color: red;
+				background-image: -webkit-repeating-linear-gradient(-30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-repeating-linear-gradient(30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-linear-gradient(30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)), -webkit-linear-gradient(-30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
+				background-size: 70px 120px;
+			}
+			.cardInner {
+				background-color: #fff;
+				-webkit-transform: rotateY(180deg);
+				-ms-transform: rotateY(180deg);
+				transform: rotateY(180deg);
+				.cardValue {
+					text-align: center;
+					font: normal 6em/2.4em @sans;
+					color: #565656;
+				}
+			}
+		}
+	}
+}
 
 
 
