--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -34,8 +34,6 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
 }
 body { line-height: 1; }
 ol, ul { list-style: none; }
-// tables still need 'cellspacing="0"' in the markup
-table { border-collapse: collapse; border-spacing: 0; }
 
 
 /* ---------------------
@@ -112,10 +110,47 @@ header {
 
 
 /* ---------------------
-				 CLIENT
+				 VOTER
 --------------------- */
 
+h1#voterInfo {
+	i {
+		display: block;
+		font-size: 16px;
+	}
+	img {
+		float: left;
+		margin-right: 10px;
+	}
+	span {
+		float: left;
+		width: 210px
 
+	}
+	input {
+		float: left;
+
+	}
+}
+
+table#estimateOptions {
+	width: 100%;
+	border-spacing: 10px;
+	td {
+		width: 50%;
+		font: normal 2em/1.5em @sans;
+		text-align: center;
+		color: #fff;
+		cursor: pointer;
+		.gradient-background-alpha(fadeOut(@link, 40%), fadeOut(@link, 100%));
+		&:hover {
+			.gradient-background-alpha(fadeOut(@hover, 40%), fadeOut(@hover, 100%));
+		}
+		&.lastVote {
+			.gradient-background-alpha(fadeOut(spin(@link, 180), 40%), fadeOut(spin(@link, 180), 100%));
+		}
+	}
+}
 
 
 
@@ -126,6 +161,10 @@ header {
 
 body { perspective: 1000; }
 
+h2#status {
+
+}
+
 ul {
 	width: 100%;
 	li {
@@ -133,10 +172,10 @@ ul {
 		position: relative;
 		width: 200px;
 		margin: 20px;
-		img {
+		> img {
 
 		}
-		h3 {
+		> h3 {
 			display: inline-block;
 			vertical-align: middle;
 		} 
