--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -200,11 +200,24 @@ ul {
 		width: 200px;
 		margin: 20px;
 		> img {
-			margin-right: 10px
+			display: block;
+			padding: 25px 25px 0;
+			margin-left: 24px;
+			border: solid rgba(255,255,255,0.25);
+			border-width: 1px 1px 0;
+			border-radius: 10px 10px 0 0;
+			background: rgba(0,0,0,0.25)
 		}
 		> h3 {
-			display: inline-block;
-			vertical-align: middle;
+			height: 40px;
+			width: 150px;
+			margin-left: 24px;
+			border: solid rgba(255,255,255,0.25);
+			border-width: 0 1px 1px;
+			border-radius: 0 0 10px 10px;
+			line-height: 40px;
+			text-align: center;
+			background: rgba(0,0,0,0.3);
 		} 
 		.card {
 			position: absolute;
@@ -212,7 +225,7 @@ ul {
 			height: 270px;
 			left: 0;
 			top: 9999px;
-			&.visible { top: 120px; }
+			&.visible { top: 180px; }
 			-webkit-transition: 0.6s;
 			transition: 0.6s;
 			-webkit-transform-style: preserve-3d;
