reset card selection when new round starts, display average when estimation ends

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -193,6 +193,14 @@ h2#status {
 	.button();
 }
 
+#average {
+	display: none;
+
+	.val {
+		font-weight: bold;
+	}
+}
+
 .voterImage {
 	display: block;
 	padding: 25px 25px 0;
