--- a/views/roomHost.jade
+++ b/views/roomHost.jade
@@ -5,7 +5,10 @@ block content
 
 	h2 Status: 
 		span Waiting to begin
-	button#toggleRound Toggle Round
+	button#toggleRound Begin Estimating
+
+	#average The average estimate is 
+		span.val
 
 	ul#users
 
