clean up the room # block on the voter page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -139,11 +139,16 @@ header {
 
 #voterRoomInfo {
 	display: block;
-	font-size: 16px;
+	height: 30px;
+	padding-left: 20px;
+	background: rgba(0,0,0,0.5);
+	line-height: 30px;
+	font-size: 14px;
+	font-weight: bold;
 }
 #voterInfo {
 	position: relative;
-	margin: 10px;
+	margin: 10px 10px 10px 20px;
 
 	.voterName,.voterImage {
 		margin-left: 0;
