add a status message about the current estimating round to the voter page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -140,11 +140,16 @@ header {
 #voterRoomInfo {
 	display: block;
 	height: 30px;
-	padding-left: 20px;
+	padding: 0 20px;
 	background: rgba(0,0,0,0.5);
 	line-height: 30px;
 	font-size: 14px;
 	font-weight: bold;
+
+	.status {
+		display: none;
+		float: right;
+	}
 }
 #voterInfo {
 	position: relative;
