--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
 	#voterRoomInfo Room: #{roomId} 
+		.status.newRound Choose a card!
+		.status.roundEnd Round is over.
 	#voterInfo
 		img.voterImage#avatar(src='#{avatar}')
 		h3.voterName #{user}
