re-add styles for status messages

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -145,6 +145,11 @@ header {
 	line-height: 30px;
 	font-size: 14px;
 	font-weight: bold;
+
+	.status {
+		float: right;
+		display: none;
+	}
 }
 #voterInfo {
 	position: relative;
