--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -13,6 +13,9 @@ block content
 
 	table#estimateOptions
 		tr
+			td ?
+			td 0.5
+		tr
 			td 1
 			td 2
 		tr
@@ -27,6 +30,9 @@ block content
 		tr
 			td 55
 			td 89
+		tr
+			td &infin;
+			td.coffee coffee
 
 	script.
 		var bp = {
