--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -41,6 +41,7 @@ ol, ul { list-style: none; }
 --------------------- */
 
 html {
+	padding-bottom: 40px;
 	background: @bg;
 	body {
 		font: 400 16px/1.8em @sans;
@@ -132,6 +133,99 @@ header {
 	}
 }
 
+.cardStyle(@size: 1) {
+	position: absolute;
+	width: 200px;
+	height: 270px;
+	left: 0;
+	top: 9999px;
+	&.visible { top: 180px; }
+	-webkit-transition: 0.6s;
+	transition: 0.6s;
+	-webkit-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	&.showValue {
+		.transform(rotateY(180deg));
+	}
+	&.spin {
+		-webkit-transition: 30s;
+		transition: 30s;
+		.transform(rotateY(7380deg));
+	}
+	.cardInner, .cardBack {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0; left: 0;
+		border: 10px*@size solid #fff;
+		border-radius: 5px;
+		box-shadow: 0 0 3px #444;
+		.box-sizing();
+		-webkit-backface-visibility: hidden;
+		-moz-backface-visibility: hidden;
+		-ms-backface-visibility: hidden;
+		backface-visibility: hidden;
+	}
+	.cardBack {
+		background-color: #032E63;
+		background-repeat: repeat;
+		background-position: 50% 50%;
+		&.argile {
+			background-image: -webkit-repeating-linear-gradient(-30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-repeating-linear-gradient(30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-linear-gradient(30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)), -webkit-linear-gradient(-30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
+			background-size: 70px*@size 120px*@size;
+		}
+		&.denim {
+			background-image: url('/images/texture_denim.png');
+		}
+		&.graphpaper {
+			background-image: url('/images/texture_graphpaper.png');
+		}
+		&.paisley {
+			background-image: url('/images/texture_paisley.png');
+			background-size: 100%*@size;
+		}
+		&.wood {
+			background-image: url('/images/texture_wood.png');
+			background-size: 230px*@size;
+		}
+		&.goat {
+			background-image: url('/images/texture_goat.png');
+			background-repeat: no-repeat;
+			background-position: 95% 100%;
+			background-size: 150px*@size;
+		}
+	}
+	.cardInner {
+		background-color: #fff;
+		.transform(rotateY(180deg));
+		.cardValue {
+			text-align: center;
+			font: normal 6em/2.4em @sans;
+			color: #565656;
+			&.min { color: #000fd2; }
+			&.max { color: #d21900; }
+			&.coffee {
+				text-indent: 9999px;
+				&:before {
+					content: '';
+					display: block;
+					position: absolute;
+					top: 30px;
+					width: 180px;
+					height: 180px;
+					margin: 0 auto;
+					background: url("../images/coffee-black.png") no-repeat center center;
+					background-origin: content-box;
+					background-size: 80%;
+					opacity: .65;
+				}
+			}
+		}
+	}
+}
+
+
 
 /* ---------------------
 				 VOTER
@@ -158,24 +252,22 @@ header {
 	.voterName,.voterImage {
 		margin-left: 0;
 	}
-	
-	#cardColor {
+
+	#cardStyle {
 		position: absolute;
 		top: 0;
 		left: 170px;
-
 		h4 {
 			height: 32px;
 			text-align: center;
 		}
-
-		input {
+		#cardPreview {
+			.cardStyle(.5);
+			position: relative;
+			top: auto; left: auto;
 			box-sizing: border-box;
 			width: 90px;
 			height: 120px;
-			padding: 0 2px;
-			border: 2px solid white;
-			border-radius: 3px;
 		}
 	}
 }
@@ -198,7 +290,6 @@ table#estimateOptions {
 		}
 		&.coffee {
 			font-size: 0;
-
 			&:before {
 				content: '';
 				display: block;
@@ -211,6 +302,40 @@ table#estimateOptions {
 			}
 
 		}
+	}
+}
+
+div#cardStylePop {
+	display: none;
+	position: absolute;
+	top: 50%; left: 50%;
+	width: 180px;
+	height: 120px;
+	padding: 20px;
+	margin: -100px 0 0 -110px;
+	background: #fff;
+	box-shadow: 0 3px 5px 1px rgba(0, 0, 0, .6);
+	.border-radius(5px);
+	label {
+		display: block;
+		width: 150px;
+		color: @bg;
+	}
+	select#pattern {
+		width: 150px;
+		text-transform: capitalize;
+	}
+	input#color {
+		width: 150px;
+	}
+	.close {
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		font-size: 1.4em;
+		cursor: pointer;
 	}
 }
 
@@ -265,76 +390,10 @@ ul {
 		width: 200px;
 		height: 425px;
 		margin: 20px;
-		
 		.card {
-			position: absolute;
-			width: 200px;
-			height: 270px;
-			left: 0;
-			top: 9999px;
-			&.visible { top: 180px; }
-			-webkit-transition: 0.6s;
-			transition: 0.6s;
-			-webkit-transform-style: preserve-3d;
-			-ms-transform-style: preserve-3d;
-			transform-style: preserve-3d;
-			&.showValue {
-				.transform(rotateY(180deg));
-			}
-			&.spin {
-				-webkit-transition: 30s;
-				transition: 30s;
-				.transform(rotateY(10980deg));
-			}
-			.cardInner, .cardBack {
-				width: 100%;
-				height: 100%;
-				position: absolute;
-				top: 0; left: 0;
-				border: 10px solid #fff;
-				border-radius: 5px;
-				box-shadow: 0 0 3px #444;
-				.box-sizing();
-				-webkit-backface-visibility: hidden;
-				-moz-backface-visibility: hidden;
-				-ms-backface-visibility: hidden;
-				backface-visibility: hidden;
-			}
-			.cardBack {
-				background-color: red;
-				background-image: -webkit-repeating-linear-gradient(-30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-repeating-linear-gradient(30deg, rgba(255, 255, 255, .1), rgba(255, 255, 255, .1) 1px, transparent 1px, transparent 60px), -webkit-linear-gradient(30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1)), -webkit-linear-gradient(-30deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%, rgba(0, 0, 0, .1));
-				background-size: 70px 120px;
-			}
-			.cardInner {
-				background-color: #fff;
-				.transform(rotateY(180deg));
-				.cardValue {
-					position: relative;
-					text-align: center;
-					font: normal 6em/2.4em @sans;
-					color: #565656;
-					&.min { color: #000fd2; }
-					&.max { color: #d21900; }
-
-					&.coffee {
-						text-indent: 9999px;
-
-						&:before {
-							content: '';
-							display: block;
-							position: absolute;
-							top: 30px;
-							width: 180px;
-							height: 180px;
-							background: url("../images/coffee-black.png") no-repeat center center;
-							background-origin: content-box;
-							background-size: 80%;
-							margin: 0 auto;
-						}
-					}
-				}
-			}
+			.cardStyle();
 		}
 	}
 }
+
 
