--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -7,9 +7,10 @@ block content
 	#voterInfo
 		img.voterImage#avatar(src='#{avatar}')
 		h3.voterName #{user}
-		#cardColor
-			h4 Card Color
-			input(title='Select card color', type='color', value='#032E63')#color
+		#cardStyle
+			h4 Card Style
+			div#cardPreview
+				div.cardBack.argile
 
 	table#estimateOptions
 		tr
@@ -33,6 +34,20 @@ block content
 		tr
 			td &infin;
 			td.coffee coffee
+
+	div#cardStylePop
+		div.close X
+		label Pattern
+		select#pattern
+			option argile
+			option denim
+			option graphpaper
+			option paisley
+			option wood
+			option goat
+		label Color
+			input(title='Select card color', type='color', value='#032E63')#color
+
 
 	script.
 		var bp = {
