assign estimates via data attributes, allow 0.5 average estimate value

--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -14,24 +14,24 @@ block content
 
 	table#estimateOptions
 		tr
-			td ?
-			td &frac12;
-			td 1
+			td(data-value='') ?
+			td(data-value='0.5') &frac12;
+			td(data-value='1') 1
 		tr
-			td 2
-			td 3
-			td 5
+			td(data-value='2') 2
+			td(data-value='3') 3
+			td(data-value='5') 5
 		tr
-			td 8
-			td 13
-			td 21
+			td(data-value='8') 8
+			td(data-value='13') 13
+			td(data-value='21') 21
 		tr
-			td 34
-			td 55
-			td 89
+			td(data-value='34') 34
+			td(data-value='55') 55
+			td(data-value='89') 89
 		tr
-			td &infin;
-			td.coffee coffee
+			td(data-value='') &infin;
+			td.coffee(data-value='') coffee
 			td.blank &nbsp;
 
 	div#cardStylePop
