--- a/views/index.jade
+++ b/views/index.jade
@@ -20,7 +20,7 @@ block content
 						label(for='room-id') Room ID*
 						input(type='text')#room-id
 					.field
-						label(for='name') Name*
+						label(for='user') Name*
 						input(type='text')#user
 					.field
 						label(for='email') Gravatar Email
