Add MongoDB, start tracking rooms and showing stats, Resolves #1
Next Steps:
* Move DB init and model requires out into separate incude that registers mongoose models
* move index render method back out to the route include
* track number of votes in rooms
* limit stats to rooms updated in the last hour
* display stats for number of voters and votes

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,8 @@ block content
 				li Scrum Poker, Evolved
 				li Estimate Anywhere
 				li Go Faster
+			div#stats.
+				Rooms: #{numRooms}
 			
 		div.main
 			p.description.
