add number of voters to homepage

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,7 @@ block content
 				li Estimate Anywhere
 				li Go Faster
 			div#stats.
-				Rooms: #{numRooms}
+				#{voterString} estimating stories in #{roomString}
 			
 		div.main
 			p.description.
