add support for multiple deck types (currently switches all voters to current selection when a new voter joins)

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -399,6 +399,27 @@ body { perspective: 1000; }
 	float: left;
 }
 
+#deckTypes {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 40px;
+	line-height: 40px;
+	width: 380px;
+
+	.title {
+		font-weight: bold;
+	}
+	.option {
+		float: right;
+		span {
+			display: inline-block;
+			margin-left: 6px;
+			margin-right: 30px;
+		}
+	}
+}
+
 #average {
 	display: none;
 	float: left;
