--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 			
 		div.main
 			p.description.
-				BitPoints helps scrum teams estimate stories by getting rid of physical <em>scrum poker</em> decks and creating a more visible platform for team members to post and discuss points. Average estimates are automatically calculated and high/low estimates are highlighted for discussion. BitPoint is also perfect for distributed scrum teams, as team members can join from any internet-connected device.
+				BitPoints helps scrum teams estimate stories by getting rid of physical <em>scrum poker</em> decks and creating a more visible platform for team members to post and discuss points. Average estimates are automatically calculated and high/low estimates are highlighted for discussion. Perfect for distributed scrum teams, as team members can join from any internet-connected device.
 			div.join
 				h2 Join Room
 				form(id="join", action="/roomJoin")
