--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -115,6 +115,21 @@ header {
 	}
 }
 
+footer {
+	margin-top: 50px;
+	text-align: center;
+	.dcBadge {
+		display: inline-block;
+		width: 17px;
+		height: 13px;
+		background: url('/images/dc-badge.png') no-repeat 0 0;
+		background-size: contain;
+	}
+	a {
+		font-weight: bold;
+	}
+}
+
 .main {
 	margin-left: 25em;
 	.cf;
