--- a/views/index.jade
+++ b/views/index.jade
@@ -36,4 +36,14 @@ block content
 						input(type='text')#title
 					input(type='submit', value='Create A BitPoint Room')#join-room
 
+		footer
+			| Proudly made in DC 
+			a(href="http://proudlymadeindc.com/", target="_blank").dcBadge
+			|  by 
+			a(href="http://i.ammichael.com/", target="_blank") Michael
+			| , 
+			a(href="http://www.spaceforaname.com/", target="_blank") Jack</a>
+			| , &amp; 
+			a(href="http://nickswider.com/", target="_blank") Nick</a>
+
 		script(src='/javascripts/home.js')
