fix bugs where 'coffee break' card broke style during animation and where cards appear black when random color has fewer than six characters

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -251,6 +251,7 @@ footer {
 		.cornerValue {
 			color: @darktext;
 			&.coffee {
+				font-size: 0;
 				text-indent: 9999px;
 				&:before {
 					content: '';
