Adds randomly generated names if you don't give a name
Also adds a 'user left' event for voter disconnects, fixes #3

--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ block content
 						label(for='room-id') Room ID*
 						input(type='text')#room-id
 					.field
-						label(for='user') Name*
+						label(for='user') Name
 						input(type='text')#user
 					.field
 						label(for='email') Gravatar Email
