show jira details when starting estimation

--- a/views/roomHost.jade
+++ b/views/roomHost.jade
@@ -16,6 +16,7 @@ block content
 					span Standard
 
 		button#toggleRound Begin Estimating
+		input(type='text')#jira-id
 
 		#average The average estimate is 
 			span.val
