--- a/views/roomJoin.jade
+++ b/views/roomJoin.jade
@@ -11,6 +11,7 @@ block content
 			h4 Card Style
 			div#cardPreview
 				div.cardBack.argile(style='background-color:#{cardColor}')
+		#issueInfo
 
 	table#estimateOptions
 
