Slightly better Jira integration

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -483,6 +483,17 @@ body { perspective: 1000; }
 	}
 }
 
+#ticket {
+	float: left;
+	margin-left: 2em;
+	line-height: 2em;
+	.key {
+		font-weight: bold;
+	}
+	.title {
+	}
+}
+
 .voterImage {
 	display: block;
 	padding: 25px 25px 0;
